<resources>
    <string name="app_name">Santurtzi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mapbox_access_token">pk.eyJ1Ijoibm9uYW1ub25hbW5vbmFtbm9uYW0iLCJhIjoiY2t5bDl4dzN4MWFlMTJvcW9xeTFoeTA1MCJ9.zZIgdDK5b-EG24dYoxBA2Q</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hasi">HASI JOLASTEN</string>
    <string name="comprobar">Comprobar</string>
    <string name="act1Aviso">*No se tendran en cuenta las mayúsculas, minúsculas o tildes*</string>
    <string name="A5_texto">¿Cómo va la aventura? ¿A que os suena el logo que veis en la pantalla? Bueno, para quien no lo sepa es el logo de Sotera y dentro de unos segundos podreis saber mas sobre ello. para informarnos haremos un concurso con vuestros compañeros en el que remareis en vuestras traineras virtuales a la meta. ¡Para remar con más rapidez tenéis que contestar a las siguientes preguntas rápido y bien. Buena suerte!</string>


    <string name="act2_1">¡Buenos días queridos pescadores! Hoy saldremos desde el puerto de Santurtzi a pescar sardinas. Sabéis lo que son?</string>
    <string name="act2_2">Si la respuesta es que si hoy aprendereis mucho más de lo que sabíais. Pero, si es que no, no os preocupéis, esta aventura seguro que aprendereis mucho más.</string>
    <string name="act2_3">Nos hemos encontrado unas cuantas sardinas. Pero debemos señalar cual es la más sabrosa porque es la que tiene la respuesta correcta de la pregunta que os haré. ¿En la historia de Santurtzi, cuál era la forma de vida que se tenía?</string>
    <string name="act2_3_1">Agricultura</string>
    <string name="act2_3_2">Industria</string>
    <string name="act2_3_3">La pesca</string>
    <string name="act2_4">¡Correcto! Hemos pescado una sardina muy grande y sabrosa. Pero necesitamos más. Mirar! Allí hay más. ¿Cuál es el símbolo más importante de Santurtzi en sus fiestas? </string>
    <string name="act2_4_1">Las sardinas</string>
    <string name="act2_4_2">La virgen</string>
    <string name="act2_4_3">El serantes</string>
    <string name="act2_5">¡Estamos ya muy dentro del mar! Es hora de volver. Pero debemos seguir pescando un poco más. ¿Las sardinas que son?</string>
    <string name="act2_5_1">Anfibios</string>
    <string name="act2_5_2">Peces</string>
    <string name="act2_5_3">Mamiferos</string>
    <string name="act2_6">¡Estamos pescando muy bien! Y ya nos queda poco! ¿Quienes eran los que iban a pescar y quienes lo vendían en el puerto?</string>
    <string name="act2_6_1">Hombres</string>
    <string name="act2_6_2">Mujeres</string>
    <string name="act2_6_3">Ambos</string>
    <string name="act2_7">Ya casi hemos llegado. Nos queda pescar una sardina para luego disfrutar de una buena parrillada. ¿Dónde paraban todos los barcos una vez llegada de la pesca?</string>
    <string name="act2_7_1">Aparcamiento</string>
    <string name="act2_7_2">Mercado</string>
    <string name="act2_7_3">Puerto</string>
    <string name="act2_8">Pues hemos acabado la pesca. Espero que hayáis disfrutado de esta aventura. Ahora ya sabéis mucho más sobre las sardinas y Santurtzi. Hasta pronto!</string>
    <string name="volver">Volver</string>
    <string name="taldeak">TALDEAK IKUSI</string>
    <string name="title_activity_grupos">Grupos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="talde_berri_bat_sortu">TALDE BERRI BAT SORTU</string>

    <string name="act4_1">Hola amantes del punk, os presento la siguiente actividad sobre el grupo Eskorbuto. Es un grupo bastante interesante y bastante cercano a vosotros. Pero si queréis saber más ....¡VAMOS A EMPEZAR!</string>
    <string name="puntos">Puntos: </string>
    <string name="nombre_del_grupo">Nombre del grupo:</string>
    <string name="n_mero_de_intengrantes">Número de intengrantes:</string>
    <string name="infoGrupo">***El grupo se creara con 0 puntos, jugad para conseguir más y ser los primeros!***</string>
    <string name="infoNombre">***Cuidado con el nombre que elijas, no podras cambiarlo más adelante***</string>
    <string name="infoA3">¿Te gusta dibujar? En la siguiente pantalla podras hacerlo! Puedes dibujar lo que quieras el limite es tu imaginacón. Podrias dibujar algo de Santurce, como las sardinas o a Mentxu la gaviota.</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>

    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="infoA6">¡Hola chicos y chicas! En este juego deberás encontrar un fuerte del Serantes de los tres escondidos en el tablero. Para ello, tendrás que ir seleccionando la casilla en la que crees que está escondido (por ejemplo: J4), pero ¡CUIDADO! El fuerte ocupa cuatro casillas. Al encontrar un fuerte al completo, se te hará una pregunta sobre este. Si respondes correctamente, ¡Enhorabuena! Habrás ganado el juego. Si te equivocas en la respuesta, ¡no te preocupes! tendrás DOS oportunidades más. Mucha suerte!</string>
    <string name="a_jugar">¡A jugar!</string>
    <string name="bilatu">Bilatu ezazu Seranteseko iturria!</string>

</resources>